--- a/libs/home/home.component.html
+++ b/libs/home/home.component.html
@@ -1,1 +1,14 @@
-<p>Home page</p>
+<div class="sidebar">
+  <div class="header">
+    <a href="/home"><h2>>_ Dayta</h2></a>
+  </div>
+
+  <div class="footer">
+    <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Connected user
+    </button>
+    <ul class="dropdown-menu" data-bs-theme="dark">
+      <li class="dropdown-item"><i class="bi-box-arrow-right"></i>Sign out</li>
+    </ul>
+  </div>
+</div>
