Add signOut functionality

--- a/libs/home/home.component.html
+++ b/libs/home/home.component.html
@@ -8,7 +8,7 @@
       Connected user
     </button>
     <ul class="dropdown-menu" data-bs-theme="dark">
-      <li class="dropdown-item"><i class="bi-box-arrow-right"></i>Sign out</li>
+      <li class="dropdown-item" (click)="onSignOut()"><i class="bi-box-arrow-right"></i>Sign out</li>
     </ul>
   </div>
 </div>
