Add forgot password functionality

--- a/libs/login/login.component.html
+++ b/libs/login/login.component.html
@@ -25,6 +25,10 @@
       <ng-container *ngIf="!vm.loading">
         <button class="btn btn-primary" type="submit">Log in</button>
       </ng-container>
+
+      <div class="text-center">
+        <a class="link-primary" routerLink="/reset-password">Forgot password?</a>
+      </div>
     </form>
   </div>
 </ng-container>
