Add password reset functionality to auth service and reset password component

--- a/libs/reset-password/reset-password.component.html
+++ b/libs/reset-password/reset-password.component.html
@@ -1,1 +1,23 @@
-<p>reset-password works!</p>
+<ng-container *ngIf="vm$ | async as vm">
+  <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
+    <h2>Reset your password</h2>
+
+    <ng-container *ngIf="vm.alert">
+      <div class="alert" role="alert" [ngClass]="'alert-' + vm.alert.type">{{ vm.alert.message }}</div>
+    </ng-container>
+
+    <div class="form-floating">
+      <input class="form-control" type="email" id="email" formControlName="email" placeholder="Email" />
+      <label class="form-label" for="email">Email</label>
+    </div>
+
+    <ng-container *ngIf="vm.loading">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="!vm.loading">
+      <button class="btn btn-primary" type="submit">Continue</button>
+    </ng-container>
+  </form>
+</ng-container>
