Refactor alert handling in reset-password component

--- a/libs/reset-password/reset-password.component.html
+++ b/libs/reset-password/reset-password.component.html
@@ -3,7 +3,12 @@
     <h2>Reset your password</h2>
 
     <ng-container *ngIf="vm.alert">
-      <div class="alert" role="alert" [ngClass]="'alert-' + vm.alert.type">{{ vm.alert.message }}</div>
+      <ng-container *ngIf="vm.alert.type === 'error'">
+        <div class="alert alert-danger" role="alert">{{ vm.alert.message }}</div>
+      </ng-container>
+      <ng-container *ngIf="vm.alert.type === 'success'">
+        <div class="alert alert-success" role="alert">{{ vm.alert.message }}</div>
+      </ng-container>
     </ng-container>
 
     <div class="form-floating">
@@ -19,5 +24,9 @@
     <ng-container *ngIf="!vm.loading">
       <button class="btn btn-primary" type="submit">Continue</button>
     </ng-container>
+
+    <div class="text-center">
+      <a class="link-primary" routerLink="/login">Go to login</a>
+    </div>
   </form>
 </ng-container>
