--- a/libs/home/home.component.html
+++ b/libs/home/home.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="vm$ | async as vm">
   <div class="sidebar">
     <div class="header">
-      <a href="/home"><h2>>_ Dayta</h2></a>
+      <h2 class="text-center">>_ Dayta</h2>
     </div>
 
     <div class="footer">
