--- a/libs/home/home.component.html
+++ b/libs/home/home.component.html
@@ -1,16 +1,14 @@
 <ng-container *ngIf="vm$ | async as vm">
   <div class="sidebar">
-    <div class="header">
-      <h2 class="text-center">>_ Dayta</h2>
+    <div class="content">
+      <button class="btn btn-outline-secondary"><i class="bi-plus"></i>Create Dayta</button>
     </div>
 
-    <div class="footer">
-      <button class="btn btn-outline-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        {{ vm.currentUser?.email }}
-      </button>
-      <ul class="dropdown-menu" data-bs-theme="dark">
-        <li class="dropdown-item" (click)="onSignOut()"><i class="bi-box-arrow-right"></i>Sign out</li>
-      </ul>
-    </div>
+    <button class="btn btn-outline-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <i class="bi-chevron-expand"></i>{{ vm.currentUser?.email }}
+    </button>
+    <ul class="dropdown-menu" data-bs-theme="dark">
+      <li class="dropdown-item" (click)="onSignOut()"><i class="bi-box-arrow-right"></i>Sign out</li>
+    </ul>
   </div>
 </ng-container>
