--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -1,36 +1,39 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   height: 100vh;
   width: 300px;
-  padding: 1.5rem;
-  color: white;
-  background-color: black;
+  padding: 0.75rem;
+  color: var(--bs-light);
+  background-color: var(--bs-dark);
 
-  .header {
-    margin-bottom: auto;
+  .btn.btn-outline-secondary {
+    display: flex;
+    align-items: center;
+    border: none;
+    color: var(--bs-white);
 
-    a {
-      display: flex;
-      color: white;
-      text-decoration: none;
+    i {
+      margin-right: 0.5rem;
     }
   }
 
-  .footer {
-    .dropdown-menu {
-      padding: 0rem;
+  .content {
+    margin-bottom: auto;
+  }
 
-      .dropdown-item {
-        display: flex;
-        align-items: center;
-        padding: 0.75rem;
-        cursor: pointer;
+  .dropdown-menu {
+    padding: 0rem;
 
-        i {
-          margin-right: 0.75rem;
-        }
+    .dropdown-item {
+      display: flex;
+      align-items: center;
+      padding: 0.75rem;
+      cursor: pointer;
+
+      i {
+        margin-right: 0.5rem;
       }
     }
   }
