Update create dashboard button text and add width to button

--- a/libs/home/home.component.html
+++ b/libs/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="sidebar">
     <div class="content">
       <button class="btn btn-outline-secondary" (click)="onCreateDashboard(vm.currentUser)">
-        <i class="bi-plus"></i>Create Dayta
+        <i class="bi-plus"></i>Create new dashboard
       </button>
     </div>
 
