--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -11,6 +11,7 @@
   .btn.btn-outline-secondary {
     display: flex;
     align-items: center;
+    width: 100%;
     border: none;
     color: var(--bs-white);
 
