--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -1,6 +1,5 @@
 .home-container {
   display: flex;
-  align-items: top;
   height: 100vh;
 
   .sidebar {
@@ -8,7 +7,8 @@
     flex-direction: column;
     align-items: left;
     width: 300px;
-    padding: 0.75rem;
+    padding: 1rem;
+    gap: 1rem;
     color: var(--bs-light);
     background-color: var(--bs-dark);
 
@@ -24,7 +24,7 @@
       }
     }
 
-    .content {
+    .dashboard-list {
       margin-bottom: auto;
     }
 
@@ -44,7 +44,17 @@
     }
   }
 
-  .main-content  {
-    padding: 0.75rem;
+  .content {
+    flex-grow: 1;
+    padding: 1rem;
+
+    .message-no-current-dashboard {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      font-size: 3rem;
+    }
   }
 }
