--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -25,7 +25,18 @@
     }
 
     .dashboard-list {
+      display: flex;
+      flex-direction: column;
       margin-bottom: auto;
+      gap: 0.5rem;
+
+      .dashboard-list-item {
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+      }
     }
 
     .dropdown-menu {
