--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -18,10 +18,7 @@
       width: 100%;
       border: none;
       color: var(--bs-white);
-
-      i {
-        margin-right: 0.5rem;
-      }
+      gap: 0.5rem;
     }
 
     .dashboard-list {
@@ -56,15 +53,17 @@
   }
 
   .content {
+    display: flex;
     flex-grow: 1;
+    height: 100%;
     padding: 1rem;
 
     .message-no-current-dashboard {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      width: 100%;
+
       font-size: 3rem;
     }
   }
