--- a/libs/home/home.component.scss
+++ b/libs/home/home.component.scss
@@ -1,11 +1,13 @@
 .home-container {
   display: flex;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  padding: 0px;
 
   .sidebar {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    height: 100%;
     width: 300px;
     padding: 1rem;
     gap: 1rem;
@@ -42,16 +44,15 @@
 
   .content {
     display: flex;
-    flex-grow: 1;
     height: 100%;
+    width: 100%;
     padding: 1rem;
 
     .message-no-current-dashboard {
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       width: 100%;
-
       font-size: 3rem;
     }
   }
