--- a/libs/dashboards/dashboard.component.scss
+++ b/libs/dashboards/dashboard.component.scss
@@ -6,28 +6,25 @@
 .dashboard-container {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
 
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+  .form-control {
+    color: var(--bs-light);
+    background: none;
+    border: none;
+    border-radius: 0;
 
-    .form-control {
-      border: none;
-      border-radius: 0;
-
-      &:hover {
-        background-color: var(--bs-gray-100);
-        box-shadow: none;
-      }
-      &:active {
-        background-color: var(--bs-gray-100);
-        box-shadow: none;
-      }
-      &:focus {
-        background-color: var(--bs-gray-100);
-        box-shadow: none;
-      }
+    &:hover {
+      background-color: var(--bs-gray-700);
+      box-shadow: none;
+    }
+    &:active {
+      background-color: var(--bs-gray-700);
+      box-shadow: none;
+    }
+    &:focus {
+      background-color: var(--bs-gray-700);
+      box-shadow: none;
     }
   }
 }
