Update name and description

--- a/libs/dashboards/dashboard.component.html
+++ b/libs/dashboards/dashboard.component.html
@@ -1,20 +1,18 @@
 <div class="dashboard-container">
-  <form [formGroup]="dashboardForm">
-    <input
-      class="fs-1 form-control"
-      type="text"
-      name="name"
-      id="name"
-      formControlName="name"
-      [value]="dashboard.description"
-    />
-    <input
-      class="fs-4 form-control"
-      type="text"
-      name="description"
-      id="description"
-      formControlName="description"
-      [value]="dashboard.description"
-    />
-  </form>
+  <input
+    class="fs-1 form-control"
+    type="text"
+    name="name"
+    id="name"
+    [formControl]="dashboardName"
+    [value]="dashboard.name"
+  />
+  <input
+    class="fs-4 form-control"
+    type="text"
+    name="description"
+    id="description"
+    [formControl]="dashboardDescription"
+    [value]="dashboard.description"
+  />
 </div>
