Add dashboard chart

--- a/libs/dashboards/dashboard.component.html
+++ b/libs/dashboards/dashboard.component.html
@@ -15,4 +15,5 @@
     [formControl]="dashboardDescription"
     [value]="dashboard.description"
   />
+  <app-dashboard-chart></app-dashboard-chart>
 </div>
