--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,35 +3,5 @@ body {
   width: 100vw;
   margin: 0px;
   padding: 0px;
-  font-family: 'Roboto', sans-serif;
-}
-
-.btn.btn-outline-secondary {
-  --bg-color: var(--bs-gray-700);
-
-  display: flex;
-  align-items: center;
-  width: 280px;
-  border: none;
-  color: var(--bs-white);
-  gap: 0.5rem;
-
-  .btn-text {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  &.selected {
-    background-color: var(--bg-color);
-  }
-  &:hover {
-    background-color: var(--bg-color);
-  }
-  &:active {
-    background-color: var(--bg-color);
-  }
-  &:focus {
-    background-color: var(--bg-color);
-  }
+  // font-family: 'Roboto', sans-serif;
 }
