--- a/libs/sidebar/sidebar.component.scss
+++ b/libs/sidebar/sidebar.component.scss
@@ -1,36 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 300px;
+  height: 100vh;
+  width: 320px;
   padding: 1rem;
-  gap: 1rem;
-  color: white;
-
-  .dashboard-list {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: auto;
-    gap: 0.5rem;
-
-    .dashboard-list-item {
-      button {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-    }
-  }
-
-  .dropdown-menu {
-    padding: 0rem;
-
-    .dropdown-item {
-      display: flex;
-      align-items: center;
-      padding: 0.75rem;
-      cursor: pointer;
-      gap: 1rem;
-    }
-  }
+  // gap: 1rem;
 }
