--- a/libs/dashboard/page/dashboard-page.component.html
+++ b/libs/dashboard/page/dashboard-page.component.html
@@ -3,8 +3,18 @@
     <app-sidebar></app-sidebar>
     <ng-container *ngIf="vm.dashboard as dashboard">
       <div class="container p-3">
-        <h1>{{ dashboard.name }}</h1>
-        <p class="lead">{{ dashboard.description }}</p>
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <h1>{{ dashboard.name }}</h1>
+            <p class="lead">{{ dashboard.description }}</p>
+          </div>
+
+          <div class="d-flex gap-3">
+            <button class="btn btn-outline-danger" type="button" (click)="onDeleteDashboard(dashboard.id)">
+              Delete
+            </button>
+          </div>
+        </div>
         <app-dashboard-chart [chartData]="mockData()"></app-dashboard-chart>
       </div>
     </ng-container>
