--- a/libs/dashboard/page/dashboard-page.component.html
+++ b/libs/dashboard/page/dashboard-page.component.html
@@ -10,6 +10,7 @@
           </div>
 
           <div class="d-flex gap-3">
+            <button class="btn btn-primary" type="button">Edit</button>
             <button class="btn btn-outline-danger" type="button" (click)="onDeleteDashboard(dashboard.id)">
               Delete
             </button>
