--- a/libs/dashboard/page/dashboard-page.component.html
+++ b/libs/dashboard/page/dashboard-page.component.html
@@ -10,13 +10,40 @@
           </div>
 
           <div class="d-flex gap-3">
-            <button class="btn btn-primary" type="button">Edit</button>
-            <button class="btn btn-outline-danger" type="button" (click)="onDeleteDashboard(dashboard.id)">
-              Delete
+            <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#editionModal">
+              Edit
             </button>
+            <button class="btn btn-outline-danger" type="button" (click)="onDeleteDashboard(dashboard)">Delete</button>
           </div>
         </div>
         <app-dashboard-chart [chartData]="mockData()"></app-dashboard-chart>
+      </div>
+
+      <div class="modal fade" id="editionModal" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Edit your dashboard</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <form [formGroup]="editionForm">
+                <div class="mb-3">
+                  <label for="nameInput" class="form-label">Name</label>
+                  <input type="text" class="form-control" id="nameInput" formControlName="name" />
+                </div>
+                <div class="mb-3">
+                  <label for="descriptionInput" class="form-label">Description</label>
+                  <input type="text" class="form-control" id="descriptionInput" formControlName="description" />
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" (click)="onEditDashboard(dashboard)">Save changes</button>
+            </div>
+          </div>
+        </div>
       </div>
     </ng-container>
   </div>
