Refactor dashboard edit and view components

--- a/libs/dashboard/view/dashboard-view.component.html
+++ b/libs/dashboard/view/dashboard-view.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="vm$ | async as vm">
   <ng-container *ngIf="vm.dashboard as dashboard">
-    <div class="container-fluid p-3">
+    <div class="container p-5">
       <div class="d-flex justify-content-between align-items-center">
         <div>
           <h1>{{ dashboard.name }}</h1>
