--- a/libs/dashboard/edit/dashboard-edit.component.html
+++ b/libs/dashboard/edit/dashboard-edit.component.html
@@ -1,16 +1,18 @@
 <ng-container *ngIf="vm$ | async as vm">
   <ng-container *ngIf="vm.dashboard as dashboard">
-    <h1>Edit your dashboard</h1>
-    <form [formGroup]="editionForm" (ngSubmit)="onEditDashboard(dashboard)">
-      <div class="mb-3">
-        <label for="nameInput" class="form-label">Name</label>
-        <input type="text" class="form-control" id="nameInput" formControlName="name" />
-      </div>
-      <div class="mb-3">
-        <label for="descriptionInput" class="form-label">Description</label>
-        <input type="text" class="form-control" id="descriptionInput" formControlName="description" />
-      </div>
-      <button class="btn btn-primary" type="submit">Save changes</button>
-    </form>
+    <div class="container p-5">
+      <h1>Edit your dashboard</h1>
+      <form [formGroup]="editionForm" (ngSubmit)="onEditDashboard(dashboard)">
+        <div class="mb-3">
+          <label for="nameInput" class="form-label">Name</label>
+          <input type="text" class="form-control" id="nameInput" formControlName="name" />
+        </div>
+        <div class="mb-3">
+          <label for="descriptionInput" class="form-label">Description</label>
+          <input type="text" class="form-control" id="descriptionInput" formControlName="description" />
+        </div>
+        <button class="btn btn-primary" type="submit">Save changes</button>
+      </form>
+    </div>
   </ng-container>
 </ng-container>
