--- a/libs/dashboard/edit/dashboard-edit.component.html
+++ b/libs/dashboard/edit/dashboard-edit.component.html
@@ -11,7 +11,10 @@
           <label for="descriptionInput" class="form-label">Description</label>
           <input type="text" class="form-control" id="descriptionInput" formControlName="description" />
         </div>
-        <button class="btn btn-primary" type="submit">Save changes</button>
+        <div class="d-flex gap-3">
+          <button class="btn btn-secondary" type="button" (click)="onCancelEdit(dashboard)">Cancel</button>
+          <button class="btn btn-primary" type="submit">Save changes</button>
+        </div>
       </form>
     </div>
   </ng-container>
