Refactor dashboard chart component to use async pipe

--- a/libs/dashboard/chart/dashboard-chart.component.html
+++ b/libs/dashboard/chart/dashboard-chart.component.html
@@ -1,9 +1,13 @@
-<apx-chart
-  [series]="chartOptions.series"
-  [chart]="chartOptions.chart"
-  [xaxis]="chartOptions.xaxis"
-  [stroke]="chartOptions.stroke"
-  [theme]="chartOptions.theme"
-  [markers]="chartOptions.markers"
-  [tooltip]="chartOptions.tooltip"
-></apx-chart>
+<ng-container *ngIf="vm$ | async as vm">
+  <ng-container *ngIf="vm.dashboard as dashboard">
+    <apx-chart
+      [series]="chartOptions.series"
+      [chart]="chartOptions.chart"
+      [xaxis]="chartOptions.xaxis"
+      [stroke]="chartOptions.stroke"
+      [theme]="chartOptions.theme"
+      [markers]="chartOptions.markers"
+      [tooltip]="chartOptions.tooltip"
+    ></apx-chart>
+  </ng-container>
+</ng-container>
