Update placeholder text for addValue input field

--- a/libs/dashboard/view/dashboard-view.component.html
+++ b/libs/dashboard/view/dashboard-view.component.html
@@ -9,7 +9,7 @@
 
         <div class="d-flex gap-3">
           <div class="input-group">
-            <input type="text" class="form-control" [formControl]="addValue" placeholder="Value" />
+            <input type="text" class="form-control" [formControl]="addValue" placeholder="Enter a value" />
             <button class="input-group-text btn btn-primary" (click)="onAddValue(dashboard)">Add value</button>
           </div>
           <button class="btn btn-primary" type="button" (click)="onEditDashboard(dashboard)">Edit</button>
