--- a/libs/sidebar/sidebar.component.scss
+++ b/libs/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 320px;
+  min-width: 320px;
   padding: 1rem;
   // gap: 1rem;
 }
