Add register functionality

--- a/libs/login/login.component.html
+++ b/libs/login/login.component.html
@@ -27,8 +27,12 @@
         <button class="btn btn-primary" type="submit">Log in</button>
       </ng-container>
 
-      <div class="text-center">
+      <div class="d-flex flex-column align-items-center gap-3">
         <a class="link-primary" routerLink="/reset-password">Forgot password?</a>
+        <p>
+          First time here?
+          <a class="link-primary" routerLink="/register">Register</a>
+        </p>
       </div>
     </form>
   </div>
