Update login and register component HTML

--- a/libs/register/register.component.html
+++ b/libs/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column position-absolute top-50 start-50 translate-middle" style="width: 300px">
   <h1 class="text-center">Dayta</h1>
-  <p class="lead text-center text-nowrap">Made for non-automated data</p>
+  <p class="lead text-center text-nowrap">Keep track of non-automated data</p>
 
   <form class="d-flex flex-column gap-3" [formGroup]="registerFrom" (ngSubmit)="onRegister()">
     <div class="form-floating">
