Add authentication and dashboard components

--- a/libs/auth/reset-password/reset-password.component.html
+++ b/libs/auth/reset-password/reset-password.component.html
@@ -26,7 +26,7 @@
     </ng-container>
 
     <div class="text-center">
-      <a class="link-primary" routerLink="/login">Go to login</a>
+      <a class="link-primary" routerLink="/login">Back to sign in</a>
     </div>
   </form>
 </ng-container>
