--- a/libs/auth/sign-up/sign-up.component.html
+++ b/libs/auth/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center">Dayta</h1>
   <p class="lead text-center text-nowrap">Keep track of non-automated data</p>
 
-  <form class="d-flex flex-column gap-3" [formGroup]="registerFrom" (ngSubmit)="onRegister()">
+  <form class="d-flex flex-column gap-3 mb-3" [formGroup]="signUpForm" (ngSubmit)="onRegister()">
     <div class="form-floating">
       <input class="form-control" type="email" id="email" formControlName="email" placeholder="Email" />
       <label class="form-label" for="email">Email</label>
@@ -13,15 +13,11 @@
       <label class="form-label" for="password">Password</label>
     </div>
 
-    <ng-container>
-      <button class="btn btn-primary" type="submit">Register</button>
-    </ng-container>
-
-    <div class="d-flex flex-column align-items-center gap-3">
-      <p>
-        Already a member?
-        <a class="link-primary" routerLink="/login">Login</a>
-      </p>
-    </div>
+    <button class="btn btn-primary" type="submit">Sign up</button>
   </form>
+
+  <p class="text-center">
+    Already a member?
+    <a class="link-primary" routerLink="/auth/sign-in">Sign in</a>
+  </p>
 </div>
