Update dashboard page and sidebar component

--- a/libs/dashboard/page/dashboard-page.component.html
+++ b/libs/dashboard/page/dashboard-page.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex p-0">
+<div class="container-fluid d-flex p-0 bg-light-subtle">
   <app-sidebar></app-sidebar>
   <router-outlet></router-outlet>
 </div>
